performance fix
git-svn-id: https://subversion.assembla.com/svn/riccardo-polvara-alessio-rossotti-niccolo-zamperetti@415 09ad4b13-ca6a-4d41-b54e-74912a6b3800