@@ -6,8 +6,9 @@ public class eventoTrucca implements HorseFeverEvent{
 	private int corsia;
 	
 	public eventoTrucca(String nomeGiocatore, int corsia){
-		this.nomeGiocatore=new String(nomeGiocatore);
-		this.corsia=new Integer(corsia)+1;
+		
+		this.nomeGiocatore=String.valueOf(nomeGiocatore);
+		this.corsia=Integer.valueOf(corsia)+1;
 	}
 	
 	@Override
